--- a/views/input.html
+++ b/views/input.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-	<form action="/add" method="post">
+	<form action="/add" method="post" name='dog_form'>
 		<fieldset>
 	    <legend>Puppy Information:</legend>
 	    Name:<br>
@@ -14,13 +14,28 @@
 	    <input type="text" name="breed" value=""><br>
 	    <br>
 	    Age:<br>
-	    <input type="text" name="age" value=""><br>
+	    <input type="number" name="age" value=""><br>
 	    Sex:<br>
 	    <input type="text" name="sex" value=""><br>
-	    <br>	    
-	    <input type="submit" value="Submit">
+	    <br>
+        <input type="button" value="Submit" onClick=answer()>
   		</fieldset>
   	</form>
+    <div id='result'></div>
 
+    <script>
+        function answer() {
+            xhttp = new XMLHttpRequest();
+            alert('hello');
+            xhttp.open("POST", "/add_dog", true);
+            xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+            params = 'name='+document.dog_form.name.value+'&'+
+                     'breed='+document.dog_form.breed.value+'&'+
+                     'age='+document.dog_form.age.value+'&'+
+                     'sex='+document.dog_form.sex.value;
+            xhttp.send(params);
+            document.getElementById("result").innerHTML = xhttp.responseText;
+        }
+    </script>
 </body>
 </html>
