--- a/views/input.html
+++ b/views/input.html
@@ -16,7 +16,10 @@
 	    Age:<br>
 	    <input type="number" name="age" value=""><br>
 	    Sex:<br>
-	    <input type="text" name="sex" value="" required /><br>
+	        <select name="sex">
+            	<option value="M">Male</option>
+            	<option value="F">Female</option>
+        </select>
 	    <br>
         <input type="button" value="Submit" onClick=answer()>
   		</fieldset>
